# rusty-balcon

./: .gitignore  AGENTS.md  Cargo.toml  PLANNING.md  README.md  build.rs  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: check.rs
