[package]
name = "rusty-balcon"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "rusty-balcon"
path = "./src/bin/main.rs"

[dependencies]
esp-idf-svc = { version = "0.52", features = ["std", "binstart", "critical-section"] }
esp-idf-sys = { version = "0.37", features = ["binstart"] }
esp-idf-hal = "0.46"
esp32-nimble = "0.12"
anyhow = "1.0"
log = "0.4"
embedded-graphics = "0.8"
sh1106 = "0.5" # 1.3" I2C OLED (Standard Blue OLED uses this)

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"

[profile.dev]
opt-level = "s"
